# doghook

./: .env.example  .gitignore  CLI.md  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose.yml  doghook.toml  kabosu.toml  kabosu.toml.example
.claude/: settings.local.json
components/cli/: Cargo.toml  build.rs
components/config/: Cargo.toml
components/dogecoin/: Cargo.toml
components/doginals/: Cargo.toml  README.md
components/doginals-indexer/: Cargo.toml
components/doginals/src/: artifact.rs  cenotaph.rs  decimal_koinu.rs  degree.rs  dogespell.rs  dune.rs  dune_id.rs  dunestone.rs  edict.rs  envelope.rs  epoch.rs  etching.rs  flaw.rs  height.rs  inscription.rs  inscription_id.rs  koinu.rs  koinu_point.rs  lib.rs  media.rs  rarity.rs  spaced_dune.rs  tag.rs
components/doginals/src/dunestone/: message.rs  tag.rs
components/dunes/: Cargo.toml
components/postgres/: Cargo.toml
components/postgres/src/: lib.rs  utils.rs
components/postgres/src/types/: mod.rs  pg_bigint_u32.rs  pg_numeric_u128.rs  pg_numeric_u64.rs  pg_smallint_u8.rs
docker/: entrypoint.sh
docs/: DMP_TODO.md  DOGINALMARKET_TODO.md  dog-vs-kabosu.md
migrations/doginals/: V10__counts_by_koinu_rarity.sql  V15__inscription_parents.sql  V16__inscription_charms.sql  V16__inscription_dogespells.sql  V17__unbound_inscription_sequence.sql  V18__chain_tip_block_hash.sql  V21__doge_lotto.sql  V21__dogelotto.sql  V22__doge_lotto_templates.sql  V22__dogelotto_templates.sql  V22__dogetags.sql  V25__dmp_auth.sql  (+14 more)
migrations/doginals-drc20/: V6__operations_to_address_index.sql  V7__balances_history.sql
(+104 files in other folders)
