[workspace]
members = [
    "components/dogecoin",
    "components/postgres",
    "components/cli",
    "components/config",
    "components/doginals-indexer",
    "components/doginals",
    "components/dunes",
]
default-members = ["components/cli"]
resolver = "2"

[workspace.dependencies]
bitcoin = "0.32.5"
deadpool-postgres = "0.14.0"
hiro-system-kit = "0.3.4"
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = "0.7.10"
prometheus = "0.13.3"

[workspace.package]
version = "0.1.0"
