[package]
name = "postgres"
version = "1.0.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
bytes = "1.3"
deadpool-postgres = { workspace = true }
num-traits = "0.2.14"
slog = { version = "2.7.0" }
tokio = { workspace = true }
tokio-postgres = { workspace = true }

[dev-dependencies]
test-case = "3.1.0"
